# projects

./: README.md
c/: .ycm_extra_conf.py  Makefile.am  configure.ac
c/include/rand/: array.h  int.h
c/src/: rand.c  rand.h
c/src/rand/: array.c  int.c  int.h
